@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-12T08:17:18Z",
+  "timestamp" : "2022-05-15T01:20:39Z",
   "count_outdated" : 17,
   "uniques_outdated" : 11,
-  "count" : 96,
-  "uniques" : 61,
+  "count" : 97,
+  "uniques" : 62,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 0, 7 ],
       "uniques": 6,
       "uniques_minmax": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
