@@ -1,6 +1,6 @@
 {
-  "count": 79,
-  "uniques": 19,
+  "count": 80,
+  "uniques": 20,
   "clones": [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 7,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
